# QMLPluginDemo

./: .gitignore  CMakeLists.txt  main.cc
example/: demo.cc
example/app/: main.qml  qml.qrc
example/app/component/: BoxDashboardElement.qml  EllipseDashboardElement.qml  GroupDashboardElement.qml  ImageDashboardElement.qml  MapDashboardElement.qml  MeterDashboardElement.qml  MozaButton.qml  MozaDashboardElement.qml  MozaScrollBar.qml  MozaTreeItemDelegate.qml  MozaTreeView.qml  RadiusRectangle.qml  TelemetryDashboardElement.qml  TextDashboardElement.qml
example/app/layout/: MozaButton.qml  MozaContentLayerItem.qml  MozaResizableBox.qml  MozaRuler.qml  MozaScrollView.qml
example/app/page/: ArtBoard.qml  ContentLayer.qml  MainPage.qml  TitleBar.qml
qml/: MozaRectangle.qml  qmldir
src/: ArtBoardListModel.cc  ArtBoardListModel.h  ContentLayerListModel.cc  ContentLayerListModel.h  CustomPropertyGroup.cc  CustomPropertyGroup.h  DashboardEditorManager.cc  DashboardEditorManager.h  DashboardStore.cc  DashboardStore.h  ElementInteractor.cc  ElementInteractor.h  ElementTree.cc  ElementTree.h  ElementTreeModel.cc  ElementTreeModel.h  LayerListModel.cc  LayerListModel.h  MozaEditorFileManager.cc  MozaEditorFileManager.h  MozaTree.cc  MozaTree.h  MozaTreeModel.cc  MozaTreeModel.h  MozaTreeModelToTableModel.cc  MozaTreeModelToTableModel.h  MozaUser.cc  MozaUser.h  QMLPlugin.cc  QMLPlugin.h
